@@ -36,6 +36,7 @@ import org.junit.Test;
 import org.junit.rules.TestRule;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
 import org.mockito.quality.Strictness;
@@ -52,14 +53,14 @@ import org.chromium.base.test.util.MinAndroidSdkLevel;
 import org.chromium.components.external_intents.ExternalNavigationHandler.OverrideUrlLoadingAsyncActionType;
 import org.chromium.components.external_intents.ExternalNavigationHandler.OverrideUrlLoadingResult;
 import org.chromium.components.external_intents.ExternalNavigationHandler.OverrideUrlLoadingResultType;
-import org.chromium.content_public.browser.LoadUrlParams;
+import org.chromium.components.external_intents.ExternalNavigationParams.AsyncActionTakenParams;
+import org.chromium.components.external_intents.ExternalNavigationParams.AsyncActionTakenParams.AsyncActionTakenType;
 import org.chromium.content_public.browser.WebContents;
 import org.chromium.content_public.browser.test.NativeLibraryTestUtils;
 import org.chromium.ui.base.PageTransition;
 import org.chromium.ui.base.WindowAndroid;
 import org.chromium.ui.test.util.BlankUiTestActivity;
 import org.chromium.url.GURL;
-import org.chromium.url.Origin;
 
 import java.net.URISyntaxException;
 import java.util.ArrayList;
@@ -72,12 +73,11 @@ import java.util.regex.Pattern;
  * Instrumentation tests for {@link ExternalNavigationHandler}.
  */
 @RunWith(BaseJUnit4ClassRunner.class)
-// clang-format off
 @Batch(Batch.UNIT_TESTS)
 @Features.DisableFeatures(ExternalIntentsFeatures.EXTERNAL_NAVIGATION_DEBUG_LOGS_NAME)
-@Features.EnableFeatures(ExternalIntentsFeatures.BLOCK_EXTERNAL_FORM_SUBMIT_WITHOUT_GESTURE_NAME)
+@Features.EnableFeatures({ExternalIntentsFeatures.BLOCK_EXTERNAL_FORM_SUBMIT_WITHOUT_GESTURE_NAME,
+        ExternalIntentsFeatures.BLOCK_SUBFRAME_INTENT_TO_SELF_NAME})
 public class ExternalNavigationHandlerTest {
-    // clang-format on
     // Expectations
     private static final int IGNORE = 0x0;
     private static final int START_INCOGNITO = 0x1;
@@ -331,6 +331,9 @@ public class ExternalNavigationHandlerTest {
                 .withRedirectHandler(handler)
                 .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_ASYNC_ACTION,
                         OverrideUrlLoadingAsyncActionType.UI_GATING_INTENT_LAUNCH, IGNORE);
+        // Callback won't have been run for the Message.
+        mUrlHandler.mAsyncActionCallback.onResult(AsyncActionTakenParams.forNoAction());
+
         checkUrl("http://youtube.com")
                 .withPageTransition(PageTransition.FORM_SUBMIT)
                 .withIsRedirect(true)
@@ -514,6 +517,8 @@ public class ExternalNavigationHandlerTest {
                 .withRedirectHandler(redirectHandler)
                 .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_ASYNC_ACTION,
                         OverrideUrlLoadingAsyncActionType.UI_GATING_INTENT_LAUNCH, IGNORE);
+        // Callback won't have been run for the Message.
+        mUrlHandler.mAsyncActionCallback.onResult(AsyncActionTakenParams.forNoAction());
 
         // http://crbug.com/709217
         redirectHandler.updateNewUrlLoading(
@@ -527,6 +532,8 @@ public class ExternalNavigationHandlerTest {
                 .withRedirectHandler(redirectHandler)
                 .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_ASYNC_ACTION,
                         OverrideUrlLoadingAsyncActionType.UI_GATING_INTENT_LAUNCH, IGNORE);
+        // Callback won't have been run for the Message.
+        mUrlHandler.mAsyncActionCallback.onResult(AsyncActionTakenParams.forNoAction());
 
         // If a user types an external protocol, it may as well ask to leave Chrome.
         redirectHandler.updateNewUrlLoading(PageTransition.TYPED, false, false, 0, 0, false, false);
@@ -536,6 +543,8 @@ public class ExternalNavigationHandlerTest {
                 .withRedirectHandler(redirectHandler)
                 .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_ASYNC_ACTION,
                         OverrideUrlLoadingAsyncActionType.UI_GATING_INTENT_LAUNCH, IGNORE);
+        // Callback won't have been run for the Message.
+        mUrlHandler.mAsyncActionCallback.onResult(AsyncActionTakenParams.forNoAction());
     }
 
     @Test
@@ -583,7 +592,7 @@ public class ExternalNavigationHandlerTest {
                 .withIsRendererInitiated(false)
                 .withIsRedirect(true)
                 .withChromeAppInForegroundRequired(true)
-                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_CLOBBERING_TAB, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
     }
 
     @Test
@@ -864,7 +873,7 @@ public class ExternalNavigationHandlerTest {
         mDelegate.setCanLoadUrlInTab(false);
         checkUrl(INTENT_URL_FOR_SELF_CUSTOM_TABS)
                 .withIsIncognito(true)
-                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_CLOBBERING_TAB, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
         Assert.assertNull(mUrlHandler.mStartActivityIntent);
         Assert.assertEquals("http://example.com/", mUrlHandler.mNewUrlAfterClobbering);
     }
@@ -886,14 +895,14 @@ public class ExternalNavigationHandlerTest {
         mDelegate.setCanLoadUrlInTab(false);
         checkUrl(INTENT_URL_FOR_SELF)
                 .withIsIncognito(true)
-                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_CLOBBERING_TAB, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
         Assert.assertNull(mUrlHandler.mStartActivityIntent);
         Assert.assertEquals("http://example.com/", mUrlHandler.mNewUrlAfterClobbering);
 
         mUrlHandler.mResolveInfoContainsSelf = false;
         checkUrl(INTENT_URL_FOR_SELF)
                 .withIsIncognito(true)
-                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_CLOBBERING_TAB, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
         Assert.assertNull(mUrlHandler.mStartActivityIntent);
         Assert.assertEquals(YOUTUBE_URL, mUrlHandler.mNewUrlAfterClobbering);
     }
@@ -950,6 +959,9 @@ public class ExternalNavigationHandlerTest {
 
         Assert.assertNull(mUrlHandler.mNewUrlAfterClobbering);
         Assert.assertNull(mUrlHandler.mReferrerUrlForClobbering);
+
+        // Callback won't have been run for the mocked AlertDialog.
+        mUrlHandler.mAsyncActionCallback.onResult(AsyncActionTakenParams.forNoAction());
     }
 
     @Test
@@ -975,7 +987,7 @@ public class ExternalNavigationHandlerTest {
         mDelegate.add(new IntentActivity(IMDB_WEBPAGE_FOR_TOM_HANKS, TEXT_APP_1_PACKAGE_NAME));
         checkUrl(INTENT_URL_WITH_FALLBACK_URL)
                 .withReferrer(SEARCH_RESULT_URL_FOR_TOM_HANKS)
-                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_CLOBBERING_TAB, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
         Assert.assertNull(mUrlHandler.mStartActivityIntent);
         Assert.assertEquals(IMDB_WEBPAGE_FOR_TOM_HANKS, mUrlHandler.mNewUrlAfterClobbering);
         Assert.assertEquals(SEARCH_RESULT_URL_FOR_TOM_HANKS, mUrlHandler.mReferrerUrlForClobbering);
@@ -991,7 +1003,7 @@ public class ExternalNavigationHandlerTest {
         // the current tab.
         checkUrl(INTENT_URL_WITH_FALLBACK_URL)
                 .withReferrer(SEARCH_RESULT_URL_FOR_TOM_HANKS)
-                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_CLOBBERING_TAB, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
 
         Assert.assertNull(mUrlHandler.mStartActivityIntent);
         Assert.assertEquals(IMDB_WEBPAGE_FOR_TOM_HANKS, mUrlHandler.mNewUrlAfterClobbering);
@@ -1027,7 +1039,7 @@ public class ExternalNavigationHandlerTest {
                 + "S." + ExternalNavigationHandler.EXTRA_BROWSER_FALLBACK_URL + "="
                 + "https://play.google.com/store/search?q=pub:imdb;end";
         checkUrl(intentBadUrl)
-                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_CLOBBERING_TAB, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
     }
 
     @Test
@@ -1084,7 +1096,8 @@ public class ExternalNavigationHandlerTest {
                         mUrlHandler.mStartActivityIntent.getDataString());
             });
         } finally {
-            if (mUrlHandler.mShownIncognitoAlertDialog != null) {
+            if (mUrlHandler.mShownIncognitoAlertDialog != null
+                    && mUrlHandler.mShownIncognitoAlertDialog.isShowing()) {
                 mUrlHandler.mShownIncognitoAlertDialog.cancel();
             }
             activity.finish();
@@ -1209,7 +1222,7 @@ public class ExternalNavigationHandlerTest {
 
                 // Inform the handler that the user decided not to launch the intent and verify that
                 // the appropriate URL is navigated to in the browser.
-                mDelegate.incognitoDialogUserDecisionCallback.onResult(new Boolean(false));
+                mDelegate.incognitoDialogUserDecisionCallback.onResult(Boolean.valueOf(false));
                 Assert.assertEquals(playUrl, mUrlHandler.mNewUrlAfterClobbering);
                 mUrlHandler.mNewUrlAfterClobbering = null;
                 mDelegate.incognitoDialogUserDecisionCallback = null;
@@ -1227,7 +1240,7 @@ public class ExternalNavigationHandlerTest {
 
                 // Inform the handler that the user decided to launch the intent and verify that
                 // the intent was launched.
-                mDelegate.incognitoDialogUserDecisionCallback.onResult(new Boolean(true));
+                mDelegate.incognitoDialogUserDecisionCallback.onResult(Boolean.valueOf(true));
                 Assert.assertNull(mUrlHandler.mNewUrlAfterClobbering);
                 Assert.assertEquals(1, monitor.getHits());
                 Assert.assertEquals("market://details?id=com.imdb.mobile&referrer=mypage",
@@ -1271,7 +1284,7 @@ public class ExternalNavigationHandlerTest {
 
                 // Inform the handler that the user decided not to launch the intent and verify that
                 // the appropriate URL is navigated to in the browser.
-                mDelegate.incognitoDialogUserDecisionCallback.onResult(new Boolean(false));
+                mDelegate.incognitoDialogUserDecisionCallback.onResult(Boolean.valueOf(false));
                 Assert.assertEquals("https://example.com/", mUrlHandler.mNewUrlAfterClobbering);
 
                 mUrlHandler.mNewUrlAfterClobbering = null;
@@ -1291,12 +1304,41 @@ public class ExternalNavigationHandlerTest {
 
                 // Inform the handler that the user decided not to launch the intent and verify that
                 // the appropriate URL is navigated to in the browser.
-                mDelegate.incognitoDialogUserDecisionCallback.onResult(new Boolean(false));
+                mDelegate.incognitoDialogUserDecisionCallback.onResult(Boolean.valueOf(false));
                 Assert.assertEquals("http://google.com/", mUrlHandler.mNewUrlAfterClobbering);
             });
         } finally {
             activity.finish();
         }
+    }
+
+    @Test
+    @MediumTest
+    public void testIncognitoAlertDialogDismissedOnNavigation() {
+        // IMDB app is installed.
+        mDelegate.add(new IntentActivity("imdb:", INTENT_APP_PACKAGE_NAME));
+
+        mUrlHandler.mCanShowIncognitoDialog = true;
+        RedirectHandler redirectHandler = RedirectHandler.create();
+        redirectHandler.updateNewUrlLoading(PageTransition.LINK, false, true, 0, 0, false, true);
+        checkUrl(INTENT_URL_WITH_FALLBACK_URL)
+                .withHasUserGesture(true)
+                .withIsIncognito(true)
+                .withRedirectHandler(redirectHandler)
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_ASYNC_ACTION,
+                        OverrideUrlLoadingAsyncActionType.UI_GATING_INTENT_LAUNCH, START_INCOGNITO);
+        Assert.assertTrue(mUrlHandler.mStartIncognitoIntentCalled);
+
+        // Callback won't have been run with the mocked AlertDialog.
+        mUrlHandler.mAsyncActionCallback.onResult(AsyncActionTakenParams.forNoAction());
+
+        Mockito.doReturn(true).when(mAlertDialog).isShowing();
+        redirectHandler.updateNewUrlLoading(PageTransition.LINK, false, false, 0, 0, false, true);
+        checkUrl(YOUTUBE_URL)
+                .withIsIncognito(true)
+                .withRedirectHandler(redirectHandler)
+                .expecting(OverrideUrlLoadingResultType.NO_OVERRIDE, IGNORE);
+        Mockito.verify(mAlertDialog).cancel();
     }
 
     @Test
@@ -1320,17 +1362,19 @@ public class ExternalNavigationHandlerTest {
         Assert.assertEquals("market://details?id=com.imdb.mobile&referrer=mypage",
                 mUrlHandler.mStartActivityIntent.getDataString());
 
+        String fallbackUrl = "https://play.google.com/store/search?q=pub:imdb";
         redirectHandler = RedirectHandler.create();
         redirectHandler.updateNewUrlLoading(PageTransition.LINK, false, true, 0, 0, false, true);
         String intentBadUrl = "intent:///name/nm0000158#Intent;scheme=imdb;package=com.imdb.mobile;"
-                + "S." + ExternalNavigationHandler.EXTRA_BROWSER_FALLBACK_URL + "="
-                + "https://play.google.com/store/search?q=pub:imdb;end";
+                + "S." + ExternalNavigationHandler.EXTRA_BROWSER_FALLBACK_URL + "=" + fallbackUrl
+                + ";end";
         checkUrl(intentBadUrl)
                 .withIsMainFrame(false)
                 .withHasUserGesture(true)
                 .withRedirectHandler(redirectHandler)
                 .withPageTransition(PageTransition.LINK)
-                .expecting(OverrideUrlLoadingResultType.NO_OVERRIDE, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
+        Assert.assertEquals(fallbackUrl, mUrlHandler.mNewUrlAfterClobbering);
     }
 
     @Test
@@ -1365,7 +1409,7 @@ public class ExternalNavigationHandlerTest {
 
     @Test
     @SmallTest
-    public void testFallbackUrl_DontFallbackForAutoSubframe() {
+    public void testFallbackUrl_FallbackForAutoSubframe() {
         // IMDB app isn't installed.
         mDelegate.setCanResolveActivityForExternalSchemes(false);
 
@@ -1381,7 +1425,8 @@ public class ExternalNavigationHandlerTest {
                 .withRedirectHandler(redirectHandler)
                 .withPageTransition(PageTransition.AUTO_SUBFRAME)
                 .withReferrer(SEARCH_RESULT_URL_FOR_TOM_HANKS)
-                .expecting(OverrideUrlLoadingResultType.NO_OVERRIDE, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
+        Assert.assertEquals(IMDB_WEBPAGE_FOR_TOM_HANKS, mUrlHandler.mNewUrlAfterClobbering);
     }
 
     @Test
@@ -1397,7 +1442,7 @@ public class ExternalNavigationHandlerTest {
                 .withRedirectHandler(redirectHandler)
                 .withPageTransition(PageTransition.LINK)
                 .withReferrer(SEARCH_RESULT_URL_FOR_TOM_HANKS)
-                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_CLOBBERING_TAB, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
     }
 
     @Test
@@ -1409,7 +1454,7 @@ public class ExternalNavigationHandlerTest {
         // Fallback URL should work even when package name isn't given.
         checkUrl(INTENT_URL_WITH_FALLBACK_URL_WITHOUT_PACKAGE_NAME)
                 .withReferrer(SEARCH_RESULT_URL_FOR_TOM_HANKS)
-                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_CLOBBERING_TAB, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
 
         Assert.assertNull(mUrlHandler.mStartActivityIntent);
         Assert.assertEquals(IMDB_WEBPAGE_FOR_TOM_HANKS, mUrlHandler.mNewUrlAfterClobbering);
@@ -1425,7 +1470,7 @@ public class ExternalNavigationHandlerTest {
         checkUrl(INTENT_URL_WITH_FALLBACK_URL)
                 .withReferrer(SEARCH_RESULT_URL_FOR_TOM_HANKS)
                 .withIsIncognito(true)
-                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_CLOBBERING_TAB, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
 
         Assert.assertNull(mUrlHandler.mStartActivityIntent);
         Assert.assertEquals(IMDB_WEBPAGE_FOR_TOM_HANKS, mUrlHandler.mNewUrlAfterClobbering);
@@ -1450,6 +1495,9 @@ public class ExternalNavigationHandlerTest {
         Assert.assertTrue(invokedIntent.getData().toString().startsWith("market://"));
         Assert.assertEquals(null, mUrlHandler.mNewUrlAfterClobbering);
         Assert.assertEquals(null, mUrlHandler.mReferrerUrlForClobbering);
+
+        // Callback won't have been run with the mocked AlertDialog.
+        mUrlHandler.mAsyncActionCallback.onResult(AsyncActionTakenParams.forNoAction());
     }
 
     @Test
@@ -1469,7 +1517,7 @@ public class ExternalNavigationHandlerTest {
         redirectHandler.updateNewUrlLoading(PageTransition.LINK, false, false, 0, 0, false, true);
         checkUrl(INTENT_URL_WITH_FALLBACK_URL_WITHOUT_PACKAGE_NAME)
                 .withRedirectHandler(redirectHandler)
-                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_CLOBBERING_TAB, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
 
         // Now the user opens a link.
         redirectHandler.updateNewUrlLoading(PageTransition.LINK, false, true, 0, 1, false, true);
@@ -1490,7 +1538,7 @@ public class ExternalNavigationHandlerTest {
         redirectHandler.updateNewUrlLoading(PageTransition.LINK, false, true, 0, 0, false, true);
         checkUrl(INTENT_URL_WITH_CHAIN_FALLBACK_URL)
                 .withRedirectHandler(redirectHandler)
-                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_CLOBBERING_TAB, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
 
         // As a result of intent resolution fallback, we have clobberred the current tab.
         // The fall-back URL was HTTP-schemed, but it was effectively redirected to a new intent
@@ -1511,7 +1559,7 @@ public class ExternalNavigationHandlerTest {
                 PageTransition.LINK, false, true, lastUserInteractionTimeInMillis, 1, false, true);
         checkUrl(INTENT_URL_WITH_FALLBACK_URL)
                 .withRedirectHandler(redirectHandler)
-                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_CLOBBERING_TAB, IGNORE);
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
     }
 
     @Test
@@ -1846,6 +1894,8 @@ public class ExternalNavigationHandlerTest {
                 .withIsRendererInitiated(false)
                 .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_ASYNC_ACTION,
                         OverrideUrlLoadingAsyncActionType.UI_GATING_BROWSER_NAVIGATION, START_FILE);
+        // Callback won't have been run for the Permission check.
+        mUrlHandler.mAsyncActionCallback.onResult(AsyncActionTakenParams.forNoAction());
     }
 
     @Test
@@ -1887,6 +1937,8 @@ public class ExternalNavigationHandlerTest {
                 .withIsRendererInitiated(false)
                 .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_ASYNC_ACTION,
                         OverrideUrlLoadingAsyncActionType.UI_GATING_BROWSER_NAVIGATION, START_FILE);
+        // Callback won't have been run for the Permission dialog.
+        mUrlHandler.mAsyncActionCallback.onResult(AsyncActionTakenParams.forNoAction());
     }
 
     @Test
@@ -2067,6 +2119,9 @@ public class ExternalNavigationHandlerTest {
                         OverrideUrlLoadingAsyncActionType.UI_GATING_INTENT_LAUNCH, START_INCOGNITO);
 
         Assert.assertTrue(mUrlHandler.mStartIncognitoIntentCalled);
+
+        // Callback won't have been run with the mocked AlertDialog.
+        mUrlHandler.mAsyncActionCallback.onResult(AsyncActionTakenParams.forNoAction());
     }
 
     @Test
@@ -2110,6 +2165,9 @@ public class ExternalNavigationHandlerTest {
                         OverrideUrlLoadingAsyncActionType.UI_GATING_INTENT_LAUNCH, START_INCOGNITO);
         Assert.assertTrue(mDelegate.maybeSetRequestMetadataCalled);
         Assert.assertTrue(mUrlHandler.mStartIncognitoIntentCalled);
+
+        // Callback won't have been run with the mocked AlertDialog.
+        mUrlHandler.mAsyncActionCallback.onResult(AsyncActionTakenParams.forNoAction());
     }
 
     @Test
@@ -2532,6 +2590,40 @@ public class ExternalNavigationHandlerTest {
                 2, redirectHandler.getLastCommittedEntryIndexBeforeStartingNavigation());
     }
 
+    private void doTestSubframeIntentTargetsSelf(boolean targetsPackage) {
+        mUrlHandler.mResolveInfoContainsSelf = true;
+        if (!targetsPackage) {
+            mDelegate.setWillResolveToDisambiguationDialog(true);
+        }
+        String url = "intent://www.example.com/#Intent;scheme=https;"
+                + "action=android.intent.action.VIEW;package=" + SELF_PACKAGE_NAME
+                + ";S.browser_fallback_url=https://bad.com;end";
+
+        RedirectHandler redirectHandler = RedirectHandler.create();
+        redirectHandler.updateNewUrlLoading(
+                PageTransition.AUTO_SUBFRAME, false, true, 0, 0, false, true);
+
+        checkUrl(url)
+                .withIsMainFrame(false)
+                .withHasUserGesture(true)
+                .withRedirectHandler(redirectHandler)
+                .withPageTransition(PageTransition.AUTO_SUBFRAME)
+                .expecting(OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB, IGNORE);
+        Assert.assertEquals("https://www.example.com/", mUrlHandler.mNewUrlAfterClobbering);
+    }
+
+    @Test
+    @SmallTest
+    public void testSubframeIntentTargetsSelf_Package() {
+        doTestSubframeIntentTargetsSelf(true);
+    }
+
+    @Test
+    @SmallTest
+    public void testSubframeIntentTargetsSelf_Chooser() {
+        doTestSubframeIntentTargetsSelf(false);
+    }
+
     private static List<ResolveInfo> makeResolveInfos(ResolveInfo... infos) {
         return Arrays.asList(infos);
     }
@@ -2605,6 +2697,7 @@ public class ExternalNavigationHandlerTest {
         public boolean mRequiresIntentChooser;
         private boolean mSendIntentsForReal;
         public boolean mExpectingMessage;
+        public Callback<AsyncActionTakenParams> mAsyncActionCallback;
 
         public ExternalNavigationHandlerForTesting(ExternalNavigationDelegate delegate) {
             super(delegate);
@@ -2659,14 +2752,6 @@ public class ExternalNavigationHandlerTest {
         }
 
         @Override
-        protected OverrideUrlLoadingResult clobberCurrentTab(
-                GURL url, GURL referrerUrl, boolean isRendererInitiated) {
-            mNewUrlAfterClobbering = url.getSpec();
-            mReferrerUrlForClobbering = referrerUrl.getSpec();
-            return OverrideUrlLoadingResult.forClobberingTab();
-        }
-
-        @Override
         public boolean isYoutubePairingCode(GURL url) {
             return super.isYoutubePairingCode(url);
         }
@@ -2680,14 +2765,12 @@ public class ExternalNavigationHandlerTest {
         protected OverrideUrlLoadingResult startActivity(Intent intent,
                 boolean requiresIntentChooser, QueryIntentActivitiesSupplier resolvingInfos,
                 ResolveActivitySupplier resolveActivity, GURL browserFallbackUrl,
-                GURL intentDataUrl, GURL referrerUrl, Origin initiatorOrigin,
-                boolean isRendererInitiated) {
+                GURL intentDataUrl, ExternalNavigationParams params) {
             mStartActivityIntent = intent;
             mRequiresIntentChooser = requiresIntentChooser;
             if (mSendIntentsForReal) {
                 return super.startActivity(intent, requiresIntentChooser, resolvingInfos,
-                        resolveActivity, browserFallbackUrl, intentDataUrl, referrerUrl,
-                        initiatorOrigin, isRendererInitiated);
+                        resolveActivity, browserFallbackUrl, intentDataUrl, params);
             }
             return OverrideUrlLoadingResult.forExternalIntent();
         }
@@ -2698,6 +2781,7 @@ public class ExternalNavigationHandlerTest {
 
         public void reset() {
             mStartActivityIntent = null;
+            mStartIncognitoIntentCalled = false;
         }
 
         @Override
@@ -2721,7 +2805,7 @@ public class ExternalNavigationHandlerTest {
             String dataString = intent.getDataString();
             if (intent.getScheme() != null) {
                 if (dataString.startsWith("http://") || dataString.startsWith("https://")) {
-                    list.add(newResolveInfo("chrome"));
+                    list.add(newResolveInfo(SELF_PACKAGE_NAME));
                 }
                 for (IntentActivity intentActivity : mIntentActivities) {
                     if (dataString.startsWith(intentActivity.urlPrefix())) {
@@ -2809,9 +2893,6 @@ public class ExternalNavigationHandlerTest {
         }
 
         @Override
-        public void loadUrlIfPossible(LoadUrlParams loadUrlParams) {}
-
-        @Override
         public void maybeSetWindowId(Intent intent) {}
 
         @Override
@@ -2878,7 +2959,7 @@ public class ExternalNavigationHandlerTest {
         }
 
         @Override
-        public boolean shouldAvoidDisambiguationDialog(Intent intent) {
+        public boolean shouldAvoidDisambiguationDialog(GURL intentDataUrl) {
             return mShouldAvoidDisambiguationDialog;
         }
 
@@ -3091,6 +3172,16 @@ public class ExternalNavigationHandlerTest {
             mDelegate.reset();
             mUrlHandler.reset();
 
+            Callback<AsyncActionTakenParams> callback = new Callback<AsyncActionTakenParams>() {
+                @Override
+                public void onResult(AsyncActionTakenParams params) {
+                    if (params.actionType == AsyncActionTakenType.NAVIGATE) {
+                        mUrlHandler.mNewUrlAfterClobbering = params.targetUrl.getSpec();
+                        mUrlHandler.mReferrerUrlForClobbering =
+                                params.externalNavigationParams.getReferrerUrl().getSpec();
+                    }
+                }
+            };
             ExternalNavigationParams params =
                     new ExternalNavigationParams
                             .Builder(new GURL(mUrl), mIsIncognito, new GURL(mReferrerUrl),
@@ -3104,8 +3195,19 @@ public class ExternalNavigationHandlerTest {
                             .setNativeClientPackageName(mDelegate.getReferrerWebappPackageName())
                             .setHasUserGesture(mHasUserGesture)
                             .setIsRendererInitiated(mIsRendererInitiated)
+                            .setAsyncActionTakenCallback(callback)
                             .build();
             OverrideUrlLoadingResult result = mUrlHandler.shouldOverrideUrlLoading(params);
+
+            if (result.getResultType() == OverrideUrlLoadingResultType.OVERRIDE_WITH_NAVIGATE_TAB) {
+                mUrlHandler.mNewUrlAfterClobbering = result.mTargetUrl.getSpec();
+                mUrlHandler.mReferrerUrlForClobbering =
+                        result.mExternalNavigationParams.getReferrerUrl().getSpec();
+            }
+            if (result.getResultType() == OverrideUrlLoadingResultType.OVERRIDE_WITH_ASYNC_ACTION) {
+                mUrlHandler.mAsyncActionCallback = params.getRequiredAsyncActionTakenCallback();
+            }
+
             boolean startActivityCalled = false;
             boolean startWebApkCalled = false;
 
